fix: support high contrast mode in color components

--- a/components/colorloupe/skin.css
+++ b/components/colorloupe/skin.css
@@ -2,3 +2,8 @@
   fill: var(--spectrum-colorloupe-inner-border-color);
   stroke: var(--spectrum-colorloupe-outer-border-color);
 }
+@media (forced-colors: active) {
+  :root {
+    --spectrum-colorloupe-outer-border-color: CanvasText;
+  }
+}
