--- a/components/colorslider/skin.css
+++ b/components/colorslider/skin.css
@@ -35,3 +35,13 @@
     }
   }
 }
+
+@media (forced-colors: active) {
+  :root {
+    --spectrum-colorslider-border-color-disabled : GrayText;
+    --spectrum-colorslider-fill-color-disabled : Canvas;
+  }
+  .spectrum-ColorSlider {
+    forced-color-adjust: none;
+  }
+}
